Basic header and open section structure

--- a/index.html
+++ b/index.html
@@ -10,9 +10,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
-
 </head>
 <body>
+    <header class="page-header">
+        <div class="page-header-container">
 
+            <a class="page-logo" href="#">
+                <p>BestShop</p>
+            </a>
+
+            <nav class="page-nav">
+                <ul class="page-nav-list">
+                    <li><a href="#"></a>why us</li>
+                    <li><a href="#"></a>benefits</li>
+                    <li><a href="#"></a>prices</li>
+                    <li><a href="#"></a>contact</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="page-open-section">
+        <div class="page-open-container">
+            <h1 class="page-open-header">Sell More!</h1>
+            <p class="page-open-text">Open shop on our platform and increase your sales</p>
+            <a class="page-open-btn" href="#">Open your shop</a>
+            <img class="page-open-img" src="assets/Background.png" alt="background">
+        </div>
+
+    </section>
 </body>
 </html>
