BestShop for desktop

--- a/index.html
+++ b/index.html
@@ -1,42 +1,215 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>BestShop</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-    <header class="page-header">
-        <div class="page-header-container">
+<header class="page-header">
+    <div class="page-header-container container">
 
-            <a class="page-logo" href="#">
-                <p>BestShop</p>
-            </a>
+        <a class="page-logo" href="#">
+            <p>BestShop</p>
+        </a>
 
-            <nav class="page-nav">
-                <ul class="page-nav-list">
-                    <li><a href="#"></a>why us</li>
-                    <li><a href="#"></a>benefits</li>
-                    <li><a href="#"></a>prices</li>
-                    <li><a href="#"></a>contact</li>
+        <nav class="page-nav">
+            <ul class="page-nav-list">
+                <li><a href="#"></a>why us</li>
+                <li><a href="#"></a>benefits</li>
+                <li><a href="#"></a>prices</li>
+                <li><a href="#"></a>contact</li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<section class="page-open-section">
+    <div class="page-open-container container">
+        <h1 class="page-open-title">Sell More!</h1>
+        <p class="page-open-text">Open shop on our platform and increase your sales</p>
+        <a class="page-open-btn" href="#">Open your shop</a>
+        <img alt="background" class="page-open-img" src="assets/Background.png">
+    </div>
+
+</section>
+<section class="statistics-section container">
+    <div class="statistics-section-container">
+        <h2 class="statistics-title">The most popular sales platform in country</h2>
+        <div class="statistics-section-wrapper">
+            <div class="statistic-column-first">
+                <div class="circle1">
+                    <img alt="person" class="person-image" src="assets/Person.svg">
+                </div>
+                <p class="number-text">100000+</p>
+                <p class="normal-text">daily entries</p>
+            </div>
+            <div class="statistic-column-second">
+                <div class="circle2">
+                    <img alt="eye" class="eye-image" src="assets/Eye.svg">
+                </div>
+                <p class="number-text">2000000+</p>
+                <p class="normal-text">seen products every day</p>
+            </div>
+            <div class="statistic-column-third">
+                <div class="circle3">
+                    <img alt="catalog" class="catalog-image" src="assets/Catalog.svg">
+                </div>
+                <p class="number-text">10000+</p>
+                <p class="normal-text">added posts daily</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="benefits-section container">
+    <div class="benefits-section-container">
+
+        <section class="first-benefits-box shape">
+            <div class="benefits-content">
+            <div class="content_substance line1">
+                <h2 class="benefits-title">Be always first</h2>
+                <p class="benefits-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+            </div>
+            </div>
+            <div class="first-benefit-photo">
+                <img alt="macbook" src="assets/Macbook.png"/>
+            </div>
+
+        </section>
+        <section class="second-benefits-box shape">
+            <div class="benefits-content">
+            <div class="content_substance line2">
+                <h2 class="benefits-title">Your shop is where you are!</h2>
+                <p class="benefits-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+            </div>
+            </div>
+            <div class="second-benefits-photo">
+                <img alt="iPhone" src="assets/iPhone.png"/>
+            </div>
+        </section>
+        <div class="third-box-position">
+            <section class="third-benefits-box">
+                <div class="benefits-content">
+                <div class="content_substance line3">
+                    <h2 class="benefits-title">Increase recognition your brand!</h2>
+                    <p class="benefits-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+                </div>
+            </section>
+            <div class="third-benefits-photo">
+                <img alt="trumpet" src="assets/Trumpet.png">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="pricing-section">
+    <div class="container">
+        <h2>Pricing</h2>
+        <section class="pricing-box">
+            <div class="first-price-option">
+                <h3 class="title1">Basic</h3>
+                <h4 class="price1">$0</h4>
+                <ul class="first-list">
+                    <li class="check">100 MB HDD</li>
+                    <li class="check">1 Subdomain</li>
+                    <li class="check">2 E-mails</li>
+                    <li class="close">Two years license</li>
+                    <li class="close">Full support</li>
                 </ul>
-            </nav>
-        </div>
-    </header>
-    <section class="page-open-section">
-        <div class="page-open-container">
-            <h1 class="page-open-header">Sell More!</h1>
-            <p class="page-open-text">Open shop on our platform and increase your sales</p>
-            <a class="page-open-btn" href="#">Open your shop</a>
-            <img class="page-open-img" src="assets/Background.png" alt="background">
-        </div>
+                <a class="btn1" href="#">Begin</a>
+            </div>
+            <div class="second-price-option">
+                <h3 class="title2">Professional</h3>
+                <h4 class="price2">$25</h4>
+                <h5>Limited offer</h5>
+                <ul class="second-list">
+                    <li class="check">500 MB HDD</li>
+                    <li class="check">2 Subdomains</li>
+                    <li class="check">5 E-mails</li>
+                    <li class="check">One years license</li>
+                    <li class="close">Full support</li>
+                </ul>
+                <a class="btn2" href="#">Begin</a>
+            </div>
+            <div class="third-price-option">
+                <h3 class="title3">Premium</h3>
+                <h4 class="price3">$60</h4>
+                <h5>Limited offer</h5>
+                <ul class="third-list">
+                    <li class="check">2GB MB HDD</li>
+                    <li class="check">5 Subdomains</li>
+                    <li class="check">20 E-mails</li>
+                    <li class="check">Two years license</li>
+                    <li class="check">Full support</li>
+                </ul>
+                <a class="btn3" href="#">Begin</a>
+            </div>
 
-    </section>
+        </section>
+    </div>
+</section>
+
+<section class="contact-section container">
+    <div class="container">
+        <section class="contact-info-box">
+            <h2>Any questions?</h2>
+            <p>Leave me your email addres or call us!</p>
+            <div class="contact-info">
+                <a href="#"><img alt="mail" src="assets/Mail%20Icon.svg"/> </a>
+                info@bestshop.xyz
+                <a href="#"><img alt="phone" src="assets/Phone%20Icon.svg"/> </a>
+                123 456 789
+            </div>
+        </section>
+
+        <section class="contact-form">
+            <label class="form-label" for="name">NAME</label>
+            <input id="name" type="text">
+            <label class="form-label" for="email">EMAIL</label>
+            <input id="email" type="email">
+            <div class="checkbox-container">
+                <input id="checkbox" type="checkbox">
+                <p>I hereby give consent for my personal data included in my application to be processed for the
+                    purposes of the recruitment process under the European Parliament’s and Council of the European
+                    Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the
+                    processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC
+                    (Data Protection Directive)</p>
+                <button class="contact-form-button">Send</button>
+            </div>
+
+        </section>
+    </div>
+</section>
+<footer class="footer">
+    <div class="footer-container container">
+        <div class="footer-logo">
+            <a href="#" class="logo">BestShop</a>
+            <p class="rights">© 2019 BestShop LTD, All Rights Reserved</p>
+        </div>
+        <section class="footer-socials">
+            <a class="twitter" href="#"><img src="assets/Twitter.svg" alt="twitter"/></a>
+            <a href="#"><img src="assets/Facebook.svg" alt="facebook"/></a>
+        </section>
+    </div>
+</footer>
 </body>
 </html>
+
+
+
+
